[gd_scene load_steps=6 format=2]

[ext_resource path="res://Entities/Environment/SecretDisplay/SecretDisplay.gd" type="Script" id=1]
[ext_resource path="res://Entities/Objects/Socket/Tab.png" type="Texture" id=2]
[ext_resource path="res://Entities/Environment/SecretDisplay/SecretDisplayTop.png" type="Texture" id=3]
[ext_resource path="res://Resources/Fonts/SecretDisplay.tres" type="DynamicFont" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 96, 32 )

[node name="SecretDisplay" type="Area2D"]
script = ExtResource( 1 )
active_color = Color( 0.454902, 0.321569, 0.588235, 1 )
inactive_color = Color( 0.505882, 0.533333, 0.517647, 1 )

[node name="BaseSprite" type="Sprite" parent="."]
position = Vector2( 0, 32 )
scale = Vector2( 8, 4 )
texture = ExtResource( 2 )

[node name="TopSprite" type="Sprite" parent="."]
position = Vector2( 0, -32 )
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 32 )
shape = SubResource( 1 )

[node name="Label" type="Label" parent="."]
modulate = Color( 0.454902, 0.321569, 0.588235, 1 )
margin_left = -64.0
margin_top = -163.0
margin_right = 64.0
margin_bottom = -126.0
rect_min_size = Vector2( 128, 32 )
custom_fonts/font = ExtResource( 4 )
text = "Level 1"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SecretFound" type="Label" parent="."]
modulate = Color( 0.454902, 0.321569, 0.588235, 1 )
margin_left = -64.0
margin_top = -134.0
margin_right = 64.0
margin_bottom = -97.0
rect_min_size = Vector2( 128, 32 )
custom_fonts/font = ExtResource( 4 )
text = "Secret Found"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]
[connection signal="body_entered" from="." to="." method="_on_SecretDisplay_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_SecretDisplay_body_exited"]
